tests/snapshots/arg__exclusive.snap
---
source: tests/arg.rs
expression: output
---
command cat <<'EOF_563070fc'
[1m[31merror:[0m the argument '[33m--exclusive <exclusive>[0m' cannot be used with one or more of the other specified arguments

[1m[4mUsage:[0m [1mprog[0m [OPTIONS] [input]

For more information, try '[1m--help[0m'.
EOF_563070fc
exit 1
