tests/snapshots/arg__group.snap
---
source: tests/arg.rs
expression: "util::run(spec, args)"
---
claptrap_debug='true'
claptrap_verbose='false'
