tests/snapshots/arg__groups.snap
---
source: tests/arg.rs
expression: "util::run(spec, args)"
---
claptrap_verbose='true'
claptrap_debug='false'
