tests/snapshots/arg__hide_env.snap
---
source: tests/arg.rs
expression: output
---
command cat <<'EOF'
[1m[4mUsage:[0m [1mprog[0m [OPTIONS]

[1m[4mOptions:[0m
      [1m--mode[0m <mode>  
  [1m-h[0m, [1m--help[0m         Print help
EOF
exit 0
