tests/snapshots/arg__hide_env_values.snap
---
source: tests/arg.rs
expression: "util::run(spec, args)"
---
command cat <<'EOF_192f0b15'
[1m[4mUsage:[0m [1mconnect[0m [OPTIONS]

[1m[4mOptions:[0m
      [1m--host[0m <host>  [env: CONNECT]
  [1m-h[0m, [1m--help[0m         Print help
EOF_192f0b15
exit 0
