tests/snapshots/arg__hide_long_help-2.snap
---
source: tests/arg.rs
expression: output2
---
command cat <<'EOF_3cb344f0'
[1m[4mUsage:[0m [1mprog[0m [OPTIONS]

[1m[4mOptions:[0m
      [1m--config[0m <cfg>  Some help text describing the --config arg
  [1m-h[0m, [1m--help[0m          Print help (see more with '--help')
EOF_3cb344f0
exit 0
